Fix code smells, minor refactorings